# mipt-mlops-project-1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: checks.yaml
mipt_mlops_project_1/: _main.py  commands.py  config.py  data.dvc  infer.py  playground.ipynb  tmp_preds.csv  train.py
mipt_mlops_project_1/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mipt_mlops_project_1/catboost_info/learn/: events.out.tfevents
mipt_mlops_project_1/data/: test.csv  test_preds.csv  train.csv
mipt_mlops_project_1/models/: catboost.pkl  model.pkl
mipt_mlops_project_1/outputs/2023-12-02/18-17-42/.hydra/: config.yaml  hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-19-45/.hydra/: hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-20-17/.hydra/: hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-20-54/.hydra/: config.yaml  hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-21-22/.hydra/: config.yaml  hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-22-59/.hydra/: hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-24-05/.hydra/: hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-24-19/.hydra/: hydra.yaml
mipt_mlops_project_1/outputs/2023-12-02/18-37-41/.hydra/: hydra.yaml
mipt_mlops_project_1/utils/: .pipeline.py.swp  data.py  logging.py  metrics.py  pipeline.py
