[tool.poetry]
name = "mipt-mlops-project-1"
version = "0.1.0"
description = "The first project for MIPT MLOps course"
authors = ["Melnikov Victor <vik-melnikov2001@mail.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.0"
catboost = "^1.2.2"
numpy = "^1.22.3"


[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"


[tool.black]
line-length = 90
target-version = ["py38"]


[tool.isort]
src_paths = ["mipt-mlops-project-1"]
profile = "black"
line_length = 90
lines_after_imports = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
